--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         </div>
       </div>
 
-      <button class="open-user-card-button">OPEN MY CARD</button>
       <div class="buttons">
         <button class="die-button">DIE</button>
         <button class="open-button">OPEN</button>
       </div>
       <button class="reset-button">RESET</button>
     </div>
+    <input type="text" class="result-msg" />
     <input type="text" class="left-card-point" />
     <input type="text" class="right-card-point" />
     <input type="text" class="user-point-sum" />
