--- a/betaBlackJack/index.html
+++ b/betaBlackJack/index.html
@@ -30,15 +30,14 @@
       </div>
 
       <div class="buttons">
-        <button class="die-button">DIE</button>
         <button class="open-button">OPEN</button>
+        <button class="reset-button">RESET</button>
       </div>
-      <button class="reset-button">RESET</button>
     </div>
     <input type="text" class="result-msg" />
-    <input type="text" class="left-card-point" />
-    <input type="text" class="right-card-point" />
-    <input type="text" class="user-point-sum" />
+    <input type="text" class="left-card-point point-input" />
+    <input type="text" class="right-card-point point-input" />
+    <input type="text" class="user-point-sum point-input" />
   </body>
   <script src="app.js"></script>
 </html>
